# fifteen-puzzle

./: .tool-versions  Cargo.toml  LICENSE  README.md  build.rs  taskfile.yaml
.github/workflows/: build.yaml
src/: main.rs
ui/: appwindow.slint
